--- a/project/composer.json
+++ b/project/composer.json
@@ -5,13 +5,28 @@
         "php": "^7.1.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
-        "api-platform/api-pack": "^1.1",
-        "easycorp/easyadmin-bundle": "^1.17",
+        "api-platform/core": "^2.6",
+        "composer/package-versions-deprecated": "1.11.99.2",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^1.12",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.7",
+        "easycorp/easyadmin-bundle": "^3.3",
+        "nelmio/cors-bundle": "^2.1",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.2",
+        "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
+        "symfony/expression-language": "^4.1",
         "symfony/flex": "^1.0",
         "symfony/framework-bundle": "^4.1",
+        "symfony/property-access": "^4.1",
+        "symfony/property-info": "^4.1",
+        "symfony/proxy-manager-bridge": "^4.1",
         "symfony/security-bundle": "^4.1",
+        "symfony/serializer": "^4.1",
+        "symfony/twig-bundle": "^4.1",
+        "symfony/validator": "^4.1",
         "symfony/yaml": "^4.1"
     },
     "require-dev": {
