--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,60 +5,50 @@ services:
     build: # Info to build the Docker image
       context: . # Specify where the Dockerfile is located (e.g. in the root directory of the project)
       dockerfile: Dockerfile-php # Specify the name of the Dockerfile
+    restart: unless-stopped
     environment: # You can use this section to set environment variables. But you can also use the .env file.
-     - DATABASE_URL=mysql://root:root@db:3306/project_db # Connection string for the database.
+      - DATABASE_URL=mysql://root:root@db:3306/project_db # Connection string for the database.
     volumes:
-     - ./project/:/var/www/project/ # Location of the project for php-fpm. Note this should be the same for NGINX.
+      - ./project/:/var/www/project/ # Location of the project for php-fpm. Note this should be the same for NGINX.
     depends_on:
       - composer_installation
-    networks:
-     - symfony # Docker containers (services) that need to connect to each other should be on the same network.
 
   composer_installation:
     image: composer
     volumes:
       - ./project/:/app
     command: composer install --ignore-platform-reqs
-    networks:
-      - symfony
 
   nginx:
     build:
       context: .
       dockerfile: Dockerfile-nginx
+    restart: unless-stopped
     volumes:
-     - ./project/:/var/www/project/
+      - ./project/:/var/www/project/
     ports:
-     - 80:80 # Ports that are exposed, you can connect to port 8001 to port 80 of the container.
+      - 80:80 # Ports that are exposed, you can connect to port 8001 to port 80 of the container.
     depends_on:
       - fpm
-    networks:
-     - symfony
 
   db:
     image: mysql:5.6
+    restart: unless-stopped
     environment:
-    - MYSQL_ROOT_PASSWORD=root # Setting the MYSQL credentials to root:root.
+      - MYSQL_ROOT_PASSWORD=root # Setting the MYSQL credentials to root:root.
     volumes:
-    - symfony_db:/var/lib/mysql:cached # Persist the database in a Docker volume.
+      - symfony_db:/var/lib/mysql:cached # Persist the database in a Docker volume.
     ports:
-    - 3311:3306
-    networks:
-    - symfony
+      - 3311:3306
 
   phpmyadmin:
     image: phpmyadmin
     container_name: ktebna_phpmyadmin
-    restart: always
+    restart: unless-stopped
     environment:
       - PMA_ARBITRARY=1
       - PMA_HOST=db
       - PMA_ABSOLUTE_URI=http://db.ktebna.tn/
-    networks:
-      - symfony
 
 volumes:
   symfony_db:
-
-networks:
- symfony:
