--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,20 +3,20 @@ version: "3"
 services:
   fpm:
     build: # Info to build the Docker image
-      context: . # Specify where the Dockerfile is located (e.g. in the root directory of the project)
+      context: . # Specify where the Dockerfile is located (e.g. in the root directory of the backend)
       dockerfile: Dockerfile-php # Specify the name of the Dockerfile
     restart: unless-stopped
     environment: # You can use this section to set environment variables. But you can also use the .env file.
-      - DATABASE_URL=mysql://root:root@db:3306/project_db # Connection string for the database.
+      - DATABASE_URL=mysql://root:root@db:3306/backend_db # Connection string for the database.
     volumes:
-      - ./project/:/var/www/project/ # Location of the project for php-fpm. Note this should be the same for NGINX.
+      - ./backend/:/var/www/backend/ # Location of the backend for php-fpm. Note this should be the same for NGINX.
     depends_on:
       - composer_installation
 
   composer_installation:
     image: composer
     volumes:
-      - ./project/:/app
+      - ./backend/:/app
     command: composer install --ignore-platform-reqs
 
   nginx:
@@ -25,7 +25,7 @@ services:
       dockerfile: Dockerfile-nginx
     restart: unless-stopped
     volumes:
-      - ./project/:/var/www/project/
+      - ./backend/:/var/www/backend/
     ports:
       - 80:80 # Ports that are exposed, you can connect to port 8001 to port 80 of the container.
     depends_on:
