--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,7 +68,7 @@ services:
     ports:
       - 4200:4200 # Port mapping
     command: >
-      bash -c "npm install && ng serve --host 0.0.0.0 --port 4200"
+      bash -c "npm install && ng serve --host 0.0.0.0 --port 4200 --disableHostCheck"
     depends_on:
       - nginx
 
