--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     build: # Info to build the Docker image
       context: . # Specify where the Dockerfile is located (e.g. in the root directory of the backend)
       dockerfile: ./docker/Dockerfile-php # Specify the name of the Dockerfile
+    container_name: ktebna_fpm
     restart: unless-stopped
     environment: # You can use this section to set environment variables. But you can also use the .env file.
       - DATABASE_URL=mysql://root:root@db:3306/backend_db # Connection string for the database.
@@ -17,6 +18,7 @@ services:
     build: # Info to build the Docker image
       context: . # Specify where the Dockerfile is located (e.g. in the root directory of the backend)
       dockerfile: ./docker/Dockerfile-composer # Specify the name of the Dockerfile
+    container_name: ktebna_composer
     volumes:
       - ./backend/:/app
     command: composer install --ignore-platform-reqs
@@ -25,6 +27,7 @@ services:
     build:
       context: .
       dockerfile: ./docker/Dockerfile-nginx
+    container_name: ktebna_nginx
     restart: unless-stopped
     volumes:
       - ./backend/:/var/www/backend/
@@ -38,6 +41,7 @@ services:
     build: # Info to build the Docker image
       context: . # Specify where the Dockerfile is located (e.g. in the root directory of the backend)
       dockerfile: ./docker/Dockerfile-mysql # Specify the name of the Dockerfile
+    container_name: ktebna_db
     restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=root # Setting the MYSQL credentials to root:root.
@@ -68,7 +72,7 @@ services:
     volumes: # Volume binding
       - ./frontend/:/usr/src/app
     command: >
-      bash -c "npm install && ng serve --host 0.0.0.0 --port 4200 --disableHostCheck"
+      bash -c "npm install && ng serve --host 0.0.0.0 --port 80 --disable-host-check"
     depends_on:
       - nginx
 
