--- a/docker/Dockerfile-php
+++ b/docker/Dockerfile-php
@@ -8,6 +8,6 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
         pdo_mysql \
         zip
 RUN curl -sS https://getcomposer.org/installer | php && mv composer.phar /usr/local/bin/composer
-COPY . /var/www/backend
+COPY ./backend /var/www/backend
 COPY build/php/php.ini /usr/local/etc/php/
 WORKDIR /var/www/backend/
