--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment: # You can use this section to set environment variables. But you can also use the .env file.
       - DATABASE_URL=mysql://root:root@db:3306/backend_db # Connection string for the database.
     volumes:
-      - ./backend/:/var/www/backend/ # Location of the backend for php-fpm. Note this should be the same for NGINX.
+      - ./:/var/www/ktebna/ # Location of the backend for php-fpm. Note this should be the same for NGINX.
     depends_on:
       - composer_installation
 
