--- a/backend/.env
+++ b/backend/.env
@@ -30,5 +30,5 @@ APP_SECRET=26ab5db14a568b47194d587d432ddf28
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:root@localhost/db_name?ktebna"
 ###< doctrine/doctrine-bundle ###
