--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -15,8 +15,10 @@ security:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: lazy
-            provider: app_user_provider
+            anonymous: true
+            lazy: true
+            json_login:
+              check_path: /login
 
             # activate different ways to authenticate
             # https://symfony.com/doc/current/security.html#firewalls-authentication
