--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,7 @@
         "doctrine/doctrine-bundle": "^2.4",
         "doctrine/doctrine-migrations-bundle": "^2.2",
         "doctrine/orm": "^2.9",
+        "lexik/jwt-authentication-bundle": "^2.12",
         "phpdocumentor/reflection-docblock": "^5.1",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/asset": "5.3.*",
