--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     container_name: ktebna_fpm
     restart: unless-stopped
     environment: # You can use this section to set environment variables. But you can also use the .env file.
-      - DATABASE_URL=mysql://root:root@db:3306/backend_db # Connection string for the database.
+      - DATABASE_URL=mysql://root:root@db:3306/ktebna # Connection string for the database.
     volumes:
       - ./:/var/www/ktebna/ # Location of the backend for php-fpm. Note this should be the same for NGINX.
     depends_on:
