--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -72,7 +72,7 @@ services:
     volumes: # Volume binding
       - ./frontend/:/usr/src/app
     command: >
-      bash -c "npm install && ng serve --host 0.0.0.0 --port 80 --disable-host-check"
+      bash -c "ng config -g cli.warnings.versionMismatch false && npm install && ng serve --host 0.0.0.0 --port 80 --disable-host-check"
 
 volumes:
   symfony_db:
