--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "covid": {
+    "ktebna": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/covid",
+            "outputPath": "dist/ktebna",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -69,18 +69,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "covid:build"
+            "browserTarget": "ktebna:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "covid:build:production"
+              "browserTarget": "ktebna:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "covid:build"
+            "browserTarget": "ktebna:build"
           }
         },
         "test": {
@@ -118,16 +118,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "covid:serve"
+            "devServerTarget": "ktebna:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "covid:serve:production"
+              "devServerTarget": "ktebna:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "covid"
+  "defaultProject": "ktebna"
 }
