--- a/backend/.env
+++ b/backend/.env
@@ -30,7 +30,8 @@ APP_SECRET=26ab5db14a568b47194d587d432ddf28
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="mysql://root:root@localhost/db_name?ktebna"
+#DATABASE_URL="mysql://root:root@localhost/db_name?ktebna"
+DATABASE_URL="mysql://FIBROP:@127.0.0.1:8889/k?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> lexik/jwt-authentication-bundle ###
@@ -38,3 +39,7 @@ JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
 JWT_PASSPHRASE=3b0f5d9cf33992750ed21b85a8fbe17a
 ###< lexik/jwt-authentication-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
